--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Moq">
+      <HintPath>..\packages\Moq.4.0.10827\lib\NET40\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -47,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestMainPresenter.cs" />
     <Compile Include="TestXmlLoginRepository.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -58,6 +62,13 @@
       <Project>{D34A33C8-43DF-4F14-B8BC-90E7A8806E59}</Project>
       <Name>Domain</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MVP-PassiveView-App\MVP-PassiveView-App.csproj">
+      <Project>{CA8D0756-D9D7-489F-B997-2A7CA558FF1B}</Project>
+      <Name>MVP-PassiveView-App</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
